# footballorganisertoolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: update-match.md
footballorganisertoolkit/: cli.py  config.py  spond_client.py  update_helpers.py
